# Final_project_RL

./: README.md  frames_2025-12-29_11.53.17.gv  frames_2025-12-29_11.53.48.gv  frames_2026-01-11_18.40.52.gv  frames_2026-01-12_15.06.28.gv  warehouse_map.yaml
install/aruco/share/aruco/: package.sh
install/aruco_msgs/share/aruco_msgs/: local_setup.sh  package.sh
install/aruco_ros/lib/aruco_ros/: double  marker_publisher
install/aruco_ros/share/aruco_ros/: package.sh
install/explore_lite/share/explore_lite/: local_setup.sh  package.sh
install/external_torque_sensor_broadcaster/share/ament_index/resource_index/parent_prefix_path/: external_torque_sensor_broadcaster
install/external_torque_sensor_broadcaster/share/external_torque_sensor_broadcaster/: package.sh
install/iiwa_bringup/share/iiwa_bringup/: package.sh
install/iiwa_description/share/iiwa_description/: local_setup.sh  package.sh
install/iiwa_description/share/iiwa_description/config/: iiwa_controllers.yaml
install/iiwa_description/share/iiwa_description/gazebo/: iiwa.gazebo.xacro
install/impedance_controller/share/impedance_controller/: local_setup.sh  package.sh
install/multirobot_map_merge/share/multirobot_map_merge/: local_setup.sh  package.sh
install/ros2_fra2mo/lib/ros2_fra2mo/: dynamic_tf_publisher
install/ros2_fra2mo/share/ros2_fra2mo/: package.sh
install/ros2_fra2mo/share/ros2_fra2mo/config/: iiwa.pose.yaml  slam.yaml
install/ros2_fra2mo/share/ros2_fra2mo/launch/: gazebo_fra2mo.launch.py  warehouse.launch.py
install/ros2_fra2mo/share/ros2_fra2mo/maps/: warehouse_map.pgm
install/ros2_fra2mo/share/ros2_fra2mo/src/: odom_bl_tf.cpp
install/ros2_fra2mo/share/ros2_fra2mo/urdf/: fra2mo_base_macro.xacro
install/ros2_fra2mo/share/ros2_fra2mo/worlds/: warehouse.sdf
install/ros2_kdl_package/lib/ros2_kdl_package/: ros2_kdl_node_client
install/ros2_kdl_package/share/ament_index/resource_index/package_run_dependencies/: ros2_kdl_package
install/ros2_kdl_package/share/ros2_kdl_package/: package.sh  package.xml
install/ros2_kdl_package/share/ros2_kdl_package/action/: ExecuteTrajectory.action  ExecuteTrajectory.idl
install/ros2_kdl_package/share/ros2_kdl_package/cmake/: export_ros2_kdl_package__rosidl_generator_cppExport.cmake  export_ros2_kdl_package__rosidl_typesupport_fastrtps_cppExport.cmake  ros2_kdl_package__rosidl_typesupport_cExport.cmake
install/ros2_kdl_package/share/ros2_kdl_package/launch/: launching.launch.py
log/: latest_build
src/: docking_pose
src/arucotag/: model.config  model.sdf
src/ros2_fra2mo/config/: amcl.yaml  navigation.yaml
src/ros2_fra2mo/launch/: fra2mo_navigation.launch.py  fra2mo_slam.launch.py  warehouse.launch.py
src/ros2_fra2mo/scripts/: follow_waypoints.py
src/ros2_fra2mo/urdf/: fra2mo_base_macro.xacro
src/ros2_fra2mo/worlds/: warehouse.sdf
src/ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
src/ros2_iiwa/iiwa_description/ros2_control/: iiwa.r2c_hardware.xacro
src/ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
src/ros2_kdl_package/: CMakeLists.txt  package.xml
src/ros2_kdl_package/config/: bridge_config.yaml
src/ros2_kdl_package/launch/: launching.launch.py
src/ros2_kdl_package/src/: backup_client  kdl_control.cpp  ros2_kdl_node.cpp  ros2_kdl_node_client.cpp
(+5 files in other folders)
